syntax = "proto3";

package proto;

option go_package = "../proto";

import "messages.proto";

// Agent service can list, push (create and update) and remove checks.
service Agent {
  // ListChecks fetches a list of checks registered.
  rpc ListChecks(Nil) returns (CheckList) {}

  // PushCheck creates a new check. If the check already exists it simply
  // updates the check.
  rpc PushCheck(Check) returns (BoolResponse) {}

  // RemoveCheck removes the check.
  rpc RemoveCheck(CheckID) returns (BoolResponse) {}
}
